# PECS

./: CMakeLists.txt  README.md  _assembly_8hpp_source.html  _bias_values_8hpp_source.html  _carrier_8hpp_source.html  _carrier_pair_8hpp_source.html  _generation_8hpp_source.html  _grid_8hpp_source.html  _initial_conditions_8hpp_source.html  _l_d_g_8hpp_source.html  _mixed_f_e_m_8hpp_source.html  _parameter_reader_8hpp_source.html  _parameters_8hpp_source.html  _poisson_8hpp_source.html  _post_processor_8hpp_source.html  _solar_cell_8hpp_source.html  annotated.html  class_charge_carrier_space_1_1_carrier_pair-members.html  class_charge_carrier_space_1_1_carrier_pair.html  class_electrons___equilibrium-members.html  class_electrons___equilibrium.html  class_generation-members.html  class_generation.html  class_grid___maker_1_1_grid-members.html  class_grid___maker_1_1_grid.html  class_holes___equilibrium-members.html  class_holes___equilibrium.html  class_l_d_g___system_1_1_l_d_g-members.html  class_l_d_g___system_1_1_l_d_g.html  class_mixed_poisson_1_1_mixed_f_e_m-members.html  class_mixed_poisson_1_1_mixed_f_e_m.html  class_oxidants___equilibrium-members.html  class_oxidants___equilibrium.html  class_parameter_space_1_1_parameter_reader-members.html  class_parameter_space_1_1_parameter_reader.html  class_poisson_1_1_poisson_data-members.html  class_poisson_1_1_poisson_data.html  class_post_processor-members.html  class_post_processor.html  class_reductants___equilibrium-members.html  (+57 more)
Documentation/: README.md  dox
include/: Assembly.hpp  BiasValues.hpp  Carrier.hpp  (+11 more)
(+256 files in other folders)
